--- a/src/app/descripcion/descripcion.component.html
+++ b/src/app/descripcion/descripcion.component.html
@@ -2,8 +2,7 @@
 <section id="descripcion" class="container">
   <div class="interesarte">
       <p>
-          <span>También puede interesarte: </span>computadora - canaima - antminer s9 - laptop canaima - canaima
-          letras rojas
+          <span>También puede interesarte: </span>
       </p>
   </div>
   <div class="navDetalles">
@@ -17,7 +16,7 @@
       </div>
       <div>
           <a href="#">Compartir</a>
-          <a href="#">Vender uno igual</a>
+          <a href="#">Vender</a>
       </div>
   </div>
   <article class="detallesProducto">
@@ -83,9 +82,6 @@
                   <select name="" id="">
                       <option value="value1" selected>1 unidad</option>
                       <option value="value2">2 unidad</option>
-                      <option value="value3">3 unidad</option>
-                      <option value="value3">4 unidad</option>
-                      <option value="value3">5 unidad</option>
                   </select>
                   <span>({{producto.cantidad}} disponibles)</span>
               </p>
